// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches color snapshot 1`] = `
<Text
  allowFontScaling={false}
  library="AntDesign"
  style={
    Array [
      Object {
        "color": "#FFD14A",
        "fontSize": 24,
      },
      undefined,
      Object {
        "fontFamily": "anticon",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`matches library snapshot 1`] = `
<Text
  allowFontScaling={false}
  library="AntDesign"
  style={
    Array [
      Object {
        "color": "#33343E",
        "fontSize": 24,
      },
      undefined,
      Object {
        "fontFamily": "anticon",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`matches name snapshot 1`] = `
<Text
  allowFontScaling={false}
  library="MaterialCommunityIcons"
  style={
    Array [
      Object {
        "color": "#33343E",
        "fontSize": 24,
      },
      undefined,
      Object {
        "fontFamily": "Material Design Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  󰋜
</Text>
`;
